--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,78 +1,76 @@
 [build-system]
-requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+requires = ["setuptools", "wheel"]
 
 [project]
 # See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
-name = "my-package"
-dynamic = ["version"]
-readme = "README.md"
-classifiers = [
-    "Intended Audience :: Science/Research",
-    "Development Status :: 3 - Alpha",
-    "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3",
-    "Topic :: Scientific/Engineering :: Artificial Intelligence",
-]
 authors = [
-    {name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org"}
+  {name = "Richard M. Köhler", email = "koehler.richard@charite.de"},
 ]
-requires-python = ">=3.8"
+classifiers = [
+  "Intended Audience :: Science/Research",
+  "Development Status :: 3 - Alpha",
+  "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python :: 3",
+  "Topic :: Scientific/Engineering :: Artificial Intelligence",
+]
 dependencies = [
   # Add your own dependencies here
 ]
+dynamic = ["version"]
 license = {file = "LICENSE"}
+name = "realtune"
+readme = "README.md"
+requires-python = ">=3.11"
 
 [project.urls]
-Homepage = "https://github.com/allenai/python-package-template"
-Repository = "https://github.com/allenai/python-package-template"
-Changelog = "https://github.com/allenai/python-package-template/blob/main/CHANGELOG.md"
-# Documentation = "https://my-package.readthedocs.io/"
+Changelog = "https://github.com/richardkoehler/RealTune/blob/main/CHANGELOG.md"
+Homepage = "https://github.com/richardkoehler/RealTune"
+Repository = "https://github.com/richardkoehler/RealTune"
+# Documentation = "https://realtune.readthedocs.io/"
 
 [project.optional-dependencies]
 dev = [
-    "ruff",
-    "mypy>=1.0,<1.5",
-    "black>=23.0,<24.0",
-    "isort>=5.12,<5.13",
-    "pytest",
-    "pytest-sphinx",
-    "pytest-cov",
-    "twine>=1.11.0",
-    "build",
-    "setuptools",
-    "wheel",
-    "Sphinx>=4.3.0,<7.1.0",
-    "furo==2023.7.26",
-    "myst-parser>=1.0,<2.1",
-    "sphinx-copybutton==0.5.2",
-    "sphinx-autobuild==2021.3.14",
-    "sphinx-autodoc-typehints==1.23.3",
-    "packaging"
+  "ruff",
+  "mypy>=1.0,<1.5",
+  "black>=23.0,<24.0",
+  "isort>=5.12,<5.13",
+  "pytest",
+  "pytest-sphinx",
+  "pytest-cov",
+  "twine>=1.11.0",
+  "build",
+  "setuptools",
+  "wheel",
+  "Sphinx>=4.3.0,<7.1.0",
+  "furo==2023.7.26",
+  "myst-parser>=1.0,<2.1",
+  "sphinx-copybutton==0.5.2",
+  "sphinx-autobuild==2021.3.14",
+  "sphinx-autodoc-typehints==1.23.3",
+  "packaging",
 ]
 
 [tool.setuptools.packages.find]
 exclude = [
-    "*.tests",
-    "*.tests.*",
-    "tests.*",
-    "tests",
-    "docs*",
-    "scripts*"
+  "*.tests",
+  "*.tests.*",
+  "tests.*",
+  "tests",
+  "docs*",
+  "scripts*",
 ]
 
 [tool.setuptools]
 include-package-data = true
 
 [tool.setuptools.package-data]
-my_package = ["py.typed"]
+realtune = ["py.typed"]
 
 [tool.setuptools.dynamic]
-version = {attr = "my_package.VERSION"}
+version = {attr = "realtune.VERSION"}
 
 [tool.black]
-line-length = 100
-include = '\.pyi?$'
 exclude = '''
 (
       __pycache__
@@ -85,36 +83,38 @@ exclude = '''
     | \bdoc\b
 )
 '''
+include = '\.pyi?$'
+line-length = 79
 
 [tool.isort]
-profile = "black"
 multi_line_output = 3
+profile = "black"
 
 # You can override these pyright settings by adding a personal pyrightconfig.json file.
 [tool.pyright]
 reportPrivateImportUsage = false
 
 [tool.ruff]
-line-length = 115
-target-version = "py39"
+line-length = 79
+target-version = "py311"
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
 
 [tool.mypy]
+check_untyped_defs = true
 ignore_missing_imports = true
 no_site_packages = true
-check_untyped_defs = true
 
 [[tool.mypy.overrides]]
 module = "tests.*"
 strict_optional = false
 
 [tool.pytest.ini_options]
-testpaths = "tests/"
-python_classes = [
-  "Test*",
-  "*Test"
-]
 log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
 log_level = "DEBUG"
+python_classes = [
+  "Test*",
+  "*Test",
+]
+testpaths = "tests/"
